transaction history page api bilan ulandi

--- a/src/locale/uz.json
+++ b/src/locale/uz.json
@@ -1,5 +1,6 @@
 {
   "close": "Chiqish",
   "Language": "Uz",
-  "profile": "Mening saxifam"
+  "profile": "Mening saxifam",
+  "About" : "About_uz"
 }
