home pageda withdraw sectionga malumotlar dynamic chiqarildi

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -16,9 +16,9 @@
   "pulni_olish": "Вывод средств",
 
 
-  "danak": "Данак",
+  "danak": "Danak",
   "about": "О нас",
-  "kirish": "Вступление",
+  "kirish": "Войти",
   "royxatdan_otish": "Зарегистрироваться",
 
   "bizga_ergashing": "Подписывайтесь на нас",
