--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -58,5 +58,6 @@
   "section_4_item3_link2":"Рекламируйте нас",
   "section_4_item3_link3": "Советы для магазинов",
   "section_4_item3_link4": "Рекламируется на Мегабонусе »",
-  "section_4_item4_link": "Мы считаем, что экономия - это преимущество разумного расходования денег, поэтому предлагаем новый инструмент. Объединив сотни магазинов, технологии и дизайн, мы создали отличный кэшбэк-сервис, который сделает ваши покупки по-настоящему экономичными. С помощью нашего сервиса вы можете получить 40% возврат суммы покупки в сотнях любимых магазинов и сервисов по всему миру."
+  "section_4_item4_link": "Мы считаем, что экономия - это преимущество разумного расходования денег, поэтому предлагаем новый инструмент. Объединив сотни магазинов, технологии и дизайн, мы создали отличный кэшбэк-сервис, который сделает ваши покупки по-настоящему экономичными. С помощью нашего сервиса вы можете получить 40% возврат суммы покупки в сотнях любимых магазинов и сервисов по всему миру.",
+  "terra": "TEST"
 }
