--- a/src/locale/us.json
+++ b/src/locale/us.json
@@ -58,5 +58,6 @@
   "section_4_item3_link2":"Advertise us",
   "section_4_item3_link3": "Tips for stores",
   "section_4_item3_link4": "Advertised on Megabonus »",
-  "section_4_item4_link": "We believe that savings are the benefit of spending money wisely, so we offer a new tool. Combining hundreds of stores, technology and design, we’ve created a great cashback service to make your shopping truly economical. With our service you can get a 40% return on your purchase amount from hundreds of favorite stores and services around the world."
+  "section_4_item4_link": "We believe that savings are the benefit of spending money wisely, so we offer a new tool. Combining hundreds of stores, technology and design, we’ve created a great cashback service to make your shopping truly economical. With our service you can get a 40% return on your purchase amount from hundreds of favorite stores and services around the world.",
+  "terra": "TEST2"
 }
