forget password qilish qo'shildi

--- a/src/locale/uz.json
+++ b/src/locale/uz.json
@@ -116,7 +116,7 @@
   "my_wallets": "Mineng hamyonim",
   "darodmadli_link": "Daromadli link",
   "daromadni_yechib_olish": "Daromadni yechib olish",
-  "sozlamalar": "sozlamalar",
+  "sozlamalar": "Sozlamalar",
   "dostlaringizni_taklif_qiling": "Do'stlaringizni taklif qiling va ular uchun naqd pul olish",
   "havola_yordamida_dostlar": "Havola yordamida ro'yxatdan o'tgandan so'ng, do'stingiz 'Megabonus' sodiqlik dasturida 'Savdogar' darajasini oladi. Do'stingiz har safar ...",
   "dostlardan_keladigan_daromad": "'Do'stlardan keladigan daromad' haqida batafsil",
