confirm new password page va confirm new emal page buldi

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -60,6 +60,7 @@
   "section_4_item3_link4": "Рекламируется на Мегабонусе »",
   "section_4_item4_link": "Мы считаем, что экономия - это преимущество разумного расходования денег, поэтому предлагаем новый инструмент. Объединив сотни магазинов, технологии и дизайн, мы создали отличный кэшбэк-сервис, который сделает ваши покупки по-настоящему экономичными. С помощью нашего сервиса вы можете получить 40% возврат суммы покупки в сотнях любимых магазинов и сервисов по всему миру.",
 
+
   "qoshimcha_func": "Дополнительные возможности",  
   "delete_account": "Вы хотите удалить эту учетную запись?",
   "delete": "Удалить",
@@ -119,5 +120,9 @@
   "dostlaringizni_taklif_qiling": "Приглашайте друзей и получайте за них деньги",
   "havola_yordamida_dostlar": "После регистрации по ссылке ваш друг получит уровень «Торговец» в программе лояльности «Мегабонус». Каждый раз, когда твой друг ...",
   "dostlardan_keladigan_daromad": "Подробнее о «Доходе от друзей»",
-  "xozircha_yoq": "Пока ничего нет"
+  "xozircha_yoq": "Пока ничего нет",
+  "new_password": "Новый пароль",
+  "confirm_password": "Подтвердить Пароль",
+  "confirm": "Подтверждать"
+  
 }
