--- a/src/locale/us.json
+++ b/src/locale/us.json
@@ -120,5 +120,8 @@
   "dostlaringizni_taklif_qiling": "Invite your friends and get cash for them",
   "havola_yordamida_dostlar": "After registering using the link, your friend will receive a ‘Merchant’ level in the ‘Megabonus’ loyalty program. Every time your friend ...",
   "dostlardan_keladigan_daromad": "More on ‘Income from Friends’",
-  "xozircha_yoq": "Nothing yet"
+  "xozircha_yoq": "Nothing yet",
+  "new_password": "New password",
+  "confirm_password": "Confirm password",
+  "confirm": "Confirm"
 }
