--- a/src/locale/uz.json
+++ b/src/locale/uz.json
@@ -120,5 +120,8 @@
   "dostlaringizni_taklif_qiling": "Do'stlaringizni taklif qiling va ular uchun naqd pul olish",
   "havola_yordamida_dostlar": "Havola yordamida ro'yxatdan o'tgandan so'ng, do'stingiz 'Megabonus' sodiqlik dasturida 'Savdogar' darajasini oladi. Do'stingiz har safar ...",
   "dostlardan_keladigan_daromad": "'Do'stlardan keladigan daromad' haqida batafsil",
-  "xozircha_yoq": "Hech narsa yo'q"
+  "xozircha_yoq": "Hech narsa yo'q",
+  "new_password": "Yangi Parol",
+  "confirm_password": "Parolni tasdiqlang",
+  "confirm": "Tasdiqlang"
 }
